# remotemotel

./: .env.codespaces  .env.example  .gitignore  ACTIVATION_CHECKLIST.md  ARCHITECTURE_REFACTOR.md  CLAUDE.md  CLOUD_DEPLOYMENT_GUIDE.md  CODESPACES_DEPLOYMENT.md  CODESPACES_IMPLEMENTATION_COMPLETE.md  CODESPACES_INTEGRATION_PLAN.md  CODESPACES_QUICKSTART.md  CODESPACES_READY.md  CODESPACES_SECRETS.md  COMPLETE_IMPLEMENTATION_ROADMAP.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  Dockerfile  Dockerfile.blueprint  Dockerfile.production  Dockerfile.voice  GCP_DEPLOYMENT_SUCCESS.md  GUEST_AND_STAFF_FEATURES_ROADMAP.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE_SUMMARY.md  INTEGRATION_PLAN.md  INTEGRATION_TEST_REPORT.md  PLATFORM_100_COMPLETE.md  PLATFORM_STATUS.md  PROJECT_COMPLETE.md  README.md  REALTIME_ACTIVATION_GUIDE.md  SECRETS_CONFIRMED.md  SECRETS_VALIDATION_REPORT.md  TWILIO_SIGNATURE_FIX.md  UNIFIED_CONVERSATION_ENGINE.md  VALIDATION_REPORT.md  VOICE_AI_STATUS.md  VOICE_AI_WORKING_SOLUTION.md  VOICE_IMPLEMENTATION_PLAN.md  VOICE_MODULE_DESIGN.md  (+33 more)
.devcontainer/: devcontainer.json  post-start.sh  setup.sh
.github/: copilot-instructions.md
alembic/: env.py
deploy/: deploy.sh  service.yaml  setup-gcp.sh
docs/: POSTGRES_SETUP.md  PROGRESS_SUMMARY.md  STAYHIVE_QUICKSTART.md  STRIPE_INTEGRATION.md  TEST_RESULTS_SUMMARY.md  TWILIO_QUICK_START.md  TWILIO_SETUP_GUIDE.md  VOICE_MCP_ENTERPRISE_PLAN.md
mcp_servers/: __init__.py
prisma/: schema.prisma
scripts/: create_knowledge_schema.sql  ingest_all_docs.sh  ingest_essential_docs.sh  ingest_knowledge.py  (+6 more)
(+50 files in other folders)
